--- a/test.html
+++ b/test.html
@@ -53,16 +53,55 @@
             top: calc(50% - 36px);
             left: calc(50% - 8px);
         }
+
+        .tickContainer {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        .tick {
+            width: 2px;
+            height: 10px;
+            background: white;
+            position: absolute;
+            bottom: 0;
+        }
     </style>
 </head>
 
 <body>
     <div id="animationArea">
         <div id="circleB">
+            <div class="tickContainer">
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <div class="tick"></div>
+                <!-- Add as many ticks as you want -->
+            </div>
             <div class="centerPoint">
                 <div class="label" id="labelB">B</div>
             </div>
             <div id="circleA">
+                <div class="tickContainer">
+                    <div class="tick"></div>
+                    <div class="tick"></div>
+                    <div class="tick"></div>
+                    <div class="tick"></div>
+                    <!-- Add as many ticks as you want -->
+                </div>
                 <div class="centerPoint">
                     <div class="label" id="labelA">A</div>
                 </div>
@@ -85,20 +124,39 @@
         let angle = 0; // The initial angle
         const speed = 0.01; // The speed of the animation, adjust as necessary
 
+        const tickContainerA = circleA.querySelector('.tickContainer');
+        const tickContainerB = circleB.querySelector('.tickContainer');
+
+        // Get the ticks
+        const ticksA = Array.from(tickContainerA.querySelectorAll('.tick'));
+        const ticksB = Array.from(tickContainerB.querySelectorAll('.tick'));
+
+
         function animate() {
             // Calculate the new position
             let x = distanceBetweenCenters * Math.cos(angle);
             let y = distanceBetweenCenters * Math.sin(angle);
 
-            // Update the position of circle A
-            circleA.style.transform = `translate(${x}px, ${y}px)`;
+            // Calculate the rotation angle for circle A
+            let rotationAngle = angle * radiusB / radiusA;
+
+            // Update the position and rotation of circle A
+            circleA.style.transform = `translate(${x}px, ${y}px) rotate(${rotationAngle}rad)`;
 
             // Update the angle
             angle += speed;
 
+            ticksA.forEach((tick, index) => {
+                let tickAngle = 2 * Math.PI * index / ticksA.length;
+                tick.style.transform = `rotate(${tickAngle}rad)`;
+            });
+
             // Continuously call the animate function
             requestAnimationFrame(animate);
         }
+
+        // Start the animation
+        animate();
 
         // Start the animation
         animate();
