--- a/test.html
+++ b/test.html
@@ -55,7 +55,7 @@
         }
 
         .tickContainer {
-            position: absolute;
+            position: relative;
             width: 100%;
             height: 100%;
             display: flex;
@@ -64,11 +64,13 @@
         }
 
         .tick {
+            position: absolute;
+            bottom: 50%;
+            left: 50%;
             width: 2px;
             height: 10px;
             background: white;
-            position: absolute;
-            bottom: 0;
+            transform-origin: bottom center;
         }
     </style>
 </head>
@@ -131,6 +133,20 @@
         const ticksA = Array.from(tickContainerA.querySelectorAll('.tick'));
         const ticksB = Array.from(tickContainerB.querySelectorAll('.tick'));
 
+
+        // Calculate the angle between each tick
+        const tickAngleA = 2 * Math.PI / ticksA.length;
+        const tickAngleB = 2 * Math.PI / ticksB.length;
+
+        ticksA.forEach((tick, index) => {
+            let angle = tickAngleA * index;
+            tick.style.transform = `rotate(${angle}rad) translate(${radiusA}px)`;
+        });
+
+        ticksB.forEach((tick, index) => {
+            let angle = tickAngleB * index;
+            tick.style.transform = `rotate(${angle}rad) translate(${radiusB}px)`;
+        });
 
         function animate() {
             // Calculate the new position
